# SCALER_META_HACKATHON__ROUND1

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: ci.yml
server/: Feed_Ranking_environment.py  __init__.py  app.py  data.py
