[project]
name = "feed-ranking"
version = "1.0.0"
description = "A social media feed ranking environment where AI agents learn to personalize content feeds."
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DevanshuDon"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
